--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-hello
-this a test\
-]
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Video Streaming</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="video-container">
+    <video id="videoPlayer" controls>
+      <source src="your-video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="controls">
+      <button id="playPauseBtn">Play</button>
+      <input type="range" id="volumeControl" value="100" max="100" />
+      <span id="volumeLabel">Volume: 100%</span>
+    </div>
+  </div>
 
-test 3
+  <script src="script.js"></script>
+</body>
+</html>
